fix primary  color

--- a/index.html
+++ b/index.html
@@ -532,7 +532,9 @@
     </section>
 
     <!-- Section trending products 2 -->
-    <section class="trend-prod-2"></section>
+    <section class="trend-prod-2">
+      
+    </section>
 
     <!-- Section trending products 3 -->
     <section class="trend-prod-3">
