fix header transparent 2

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
       import { renderSectionTrendingProduct2 } from './assets/js/home/section-trending-product-2.js';
 
       const header = document.querySelector('header.header');
-      renderHeader(header);
+      renderHeader(header, true);
 
       const footer = document.querySelector('footer.footer');
       renderFooter(footer);
