--- a/refund.html
+++ b/refund.html
@@ -66,35 +66,54 @@
         <header class="header"></header>
 
         <section class="main-content">
-            <h1 class="text-center">Liên hệ</h1>
+            <h1 class="text-center">Chính sách hoàn tiền</h1>
 
             <div class="paragraph">
-                <img src="./assets/imgs/contact/mouses.jpg" class="image" style="margin-bottom: 30px;">
-                <p>
-                    <strong>Gear Club</strong>
-                    là nhà phân phối độc quyền các thương hiệu lớn trên thế giới như bàn phím cơ Filco (từ tập đoàn Diatec – Nhật Bản), bàn phím cơ Realforce (từ tập đoàn Topre – Nhật Bản), cân màu Spyder (từ tập đoàn Datacolor – Mỹ), gaming gear thương hiệu Glorious (Glorious PC Gaming Race - Mỹ), Pulsar (Hàn Quốc), Lamzu, Ninjutso, Skypad (Đan Mạch), Corepad (Đức), Lethal Gaming Gear (Mỹ) và Finalmouse (Mỹ).
-                </p>
-                <p>Thông tin doanh nghiệp:</p>
+                <h2 style="color:red">Chính sách hoàn tiền</h2>
+                <div style="text-align:center;">
+                    <img src="./assets/imgs/policies/refund.jpg" class="image" style="max-width: 480px;">
+                </div>
+                <h3>Điều kiện hoàn tiền</h3>
                 <ul>
-                    <li>Giấy phép ĐKKD: 0307185382</li>
-                    <li>Ngày cấp: 04 tháng 02 năm 2009</li>
-                    <li>Nơi cấp: sở KHĐT TP.Hồ Chí Minh</li>
+                    <li>Sản phẩm Phong Cách Xanh giao đến bạn không đúng hoặc không đủ chủng loại, số lượng mà bạn đã đặt hàng.</li>
+                    <li>Sản phẩm mà bạn đặt hết hàng.</li>
                 </ul>
-                <p>Thông tin liên hệ:</p>
+                <h3>Mức hoàn:</h3>
                 <ul>
-                    <li>Địa chỉ: 89 Hồ Văn Huê, P9, Q.Phú Nhuận Hồ Chí Minh Việt Nam</li>
-                    <li>Trang web chính thức của công ty: www.gearclub.vn</li>
-                    <li>Điện thoại (028) 6.292.1182</li>
-                    <li>Hotline hỗ trợ khách hàng: 0904.135.321 và 0899.454.393</li>
-                    <li>Email: info@gearclub.vn</li>
-                    <li>Fanpage Phong Cách Xanh: www.facebook.com/gearclubvn</li>
-                    <li>Fanpage Filco: www.facebook.com/filcovietnam</li>
-                    <li>Fanpage Spyder: www.facebook.com/DatacolorSpyderVN</li>
+                    <li>100% giá trị đơn hàng.</li>
                 </ul>
-                <p>Thời gian làm việc:</p>
+                <h3>Lưu ý:</h3>
                 <ul>
-                    <li>Các ngày trong tuần: 9h - 20h</li>
-                    <li>Chủ nhật và ngày lễ: 9h – 20h</li>
+                    <li>Mức hoàn được tính theo giá bán của sản phẩm trên hóa đơn.</li>
+                    <li>Không hoàn phí quẹt thẻ và phí vận chuyển (nếu có)</li>
+                    <li>Không áp dụng chính sách hoàn tiền cho hình thức trả góp.</li>
+                </ul>
+                <h2 style="color: red">Quy định xử lý hoàn tiền</h2>
+                <div style="text-align:center;">
+                    <img src="./assets/imgs/policies/compliant.jpg" class="image" style="max-width: 480px;">
+                </div>
+                <h3>Thời gian tiếp nhận yêu cầu hoàn tiền</h3>
+                <ul>
+                    <li>8h30 đến 17h30 tất cả ngày trong tuần.</li>
+                    <li>Các yêu cầu hoàn tiền ngoài thời gian trên sẽ được ghi nhận và xử lý vào ngày làm việc kế tiếp.</li>
+                </ul>
+                <h3>Thời gian hoàn tiền</h3>
+                <p>Đối với hình thức thanh toán tiền mặt, chuyển khoản, quẹt thẻ tại cửa hàng:</p>
+                <ul>
+                    <li>3 ngày làm việc không tính thứ 7, chủ nhật và ngày lễ.</li>
+                </ul>
+                <p>Đối với hình thức thanh toán online và trả góp qua OnePay:</p>
+                <ul>
+                    <li>Thời gian hoàn tiền dựa theo chính sách của OnePay.</li>
+                </ul>
+                <h3>Hình thức hoàn tiền</h3>
+                <p>Đối với hình thức thanh toán tiền mặt, chuyển khoản, quẹt thẻ tại cửa hàng:</p>
+                <ul>
+                    <li>Chuyển khoản.</li>
+                </ul>
+                <p>Đối với hình thức thanh toán online và trả góp qua OnePay:</p>
+                <ul>
+                    <li>OnePay sẽ xử lý hoàn tiền giao dịch cho khách hàng tự động.</li>
                 </ul>
             </div>
         </section>
