--- a/tos.html
+++ b/tos.html
@@ -66,36 +66,15 @@
         <header class="header"></header>
 
         <section class="main-content">
-            <h1 class="text-center">Liên hệ</h1>
+            <h1 class="text-center">Điều khoản dịch vụ</h1>
 
             <div class="paragraph">
-                <img src="./assets/imgs/contact/mouses.jpg" class="image" style="margin-bottom: 30px;">
-                <p>
-                    <strong>Gear Club</strong>
-                    là nhà phân phối độc quyền các thương hiệu lớn trên thế giới như bàn phím cơ Filco (từ tập đoàn Diatec – Nhật Bản), bàn phím cơ Realforce (từ tập đoàn Topre – Nhật Bản), cân màu Spyder (từ tập đoàn Datacolor – Mỹ), gaming gear thương hiệu Glorious (Glorious PC Gaming Race - Mỹ), Pulsar (Hàn Quốc), Lamzu, Ninjutso, Skypad (Đan Mạch), Corepad (Đức), Lethal Gaming Gear (Mỹ) và Finalmouse (Mỹ).
-                </p>
-                <p>Thông tin doanh nghiệp:</p>
-                <ul>
-                    <li>Giấy phép ĐKKD: 0307185382</li>
-                    <li>Ngày cấp: 04 tháng 02 năm 2009</li>
-                    <li>Nơi cấp: sở KHĐT TP.Hồ Chí Minh</li>
-                </ul>
-                <p>Thông tin liên hệ:</p>
-                <ul>
-                    <li>Địa chỉ: 89 Hồ Văn Huê, P9, Q.Phú Nhuận Hồ Chí Minh Việt Nam</li>
-                    <li>Trang web chính thức của công ty: www.gearclub.vn</li>
-                    <li>Điện thoại (028) 6.292.1182</li>
-                    <li>Hotline hỗ trợ khách hàng: 0904.135.321 và 0899.454.393</li>
-                    <li>Email: info@gearclub.vn</li>
-                    <li>Fanpage Phong Cách Xanh: www.facebook.com/gearclubvn</li>
-                    <li>Fanpage Filco: www.facebook.com/filcovietnam</li>
-                    <li>Fanpage Spyder: www.facebook.com/DatacolorSpyderVN</li>
-                </ul>
-                <p>Thời gian làm việc:</p>
-                <ul>
-                    <li>Các ngày trong tuần: 9h - 20h</li>
-                    <li>Chủ nhật và ngày lễ: 9h – 20h</li>
-                </ul>
+                <p>Chúng tôi là Công ty TNHH Gear Club có địa chỉ trụ sở tại 89 Hồ Văn Huê, P.9. Q.Phú Nhuận, Tp.Hồ Chí Minh, thành lập website bán hàng thương mại điện tử www.gearclub.vn và đã được đăng ký chính thức với Bộ Công Thương Việt Nam</p>
+                <p>Khi quý khách hàng truy cập vào trang website của chúng tôi có nghĩa là quý khách đồng ý với các điều khoản này. Trang web có quyền thay đổi, chỉnh sửa, thêm hoặc lược bỏ bất kỳ phần nào trong Điều khoản mua bán hàng hóa này, vào bất cứ lúc nào. Các thay đổi có hiệu lực ngay khi được đăng trên trang web mà không cần thông báo trước. Và khi quý khách tiếp tục sử dụng trang web, sau khi các thay đổi về Điều khoản này được đăng tải, có nghĩa là quý khách chấp nhận với những thay đổi đó.</p>
+                <p><a href="./contact.html" title="Chính sách bảo hành">Chính sách bảo hành</a></p>
+                <p><a href="./shipping.html" title="Chính sách vận chuyển">Chính sách vận chuyển</a></p>
+                <p><a href="./refund.html" title="Chính sách hoàn tiền">Chính sách hoàn tiền</a></p>
+                <p>Quý khách hàng vui lòng kiểm tra thường xuyên để cập nhật những thay đổi của chúng tôi.</p>
             </div>
         </section>
 
