fix minor things

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -66,14 +66,14 @@
         <header class="header"></header>
 
         <section class="main-content">
-            <h1 class="text-center">Điều khoản dịch vụ</h1>
+            <h1 class="text-center" style="line-height: 1.4;">Điều khoản dịch vụ</h1>
 
             <div class="paragraph">
                 <p>Chúng tôi là Công ty TNHH Gear Club có địa chỉ trụ sở tại 89 Hồ Văn Huê, P.9. Q.Phú Nhuận, Tp.Hồ Chí Minh, thành lập website bán hàng thương mại điện tử www.gearclub.vn và đã được đăng ký chính thức với Bộ Công Thương Việt Nam</p>
                 <p>Khi quý khách hàng truy cập vào trang website của chúng tôi có nghĩa là quý khách đồng ý với các điều khoản này. Trang web có quyền thay đổi, chỉnh sửa, thêm hoặc lược bỏ bất kỳ phần nào trong Điều khoản mua bán hàng hóa này, vào bất cứ lúc nào. Các thay đổi có hiệu lực ngay khi được đăng trên trang web mà không cần thông báo trước. Và khi quý khách tiếp tục sử dụng trang web, sau khi các thay đổi về Điều khoản này được đăng tải, có nghĩa là quý khách chấp nhận với những thay đổi đó.</p>
-                <p><a href="./contact.html" title="Chính sách bảo hành">Chính sách bảo hành</a></p>
                 <p><a href="./shipping.html" title="Chính sách vận chuyển">Chính sách vận chuyển</a></p>
                 <p><a href="./refund.html" title="Chính sách hoàn tiền">Chính sách hoàn tiền</a></p>
+                <p><a href="./privacy.html" title="Chính sách bảo hành">Chính sách bảo mật</a></p>
                 <p>Quý khách hàng vui lòng kiểm tra thường xuyên để cập nhật những thay đổi của chúng tôi.</p>
             </div>
         </section>
