--- a/refund.html
+++ b/refund.html
@@ -66,7 +66,7 @@
         <header class="header"></header>
 
         <section class="main-content">
-            <h1 class="text-center">Chính sách hoàn tiền</h1>
+            <h1 class="text-center" style="line-height: 1.4;">Chính sách hoàn tiền</h1>
 
             <div class="paragraph">
                 <h2 style="color:red">Chính sách hoàn tiền</h2>
