--- a/shipping.html
+++ b/shipping.html
@@ -66,7 +66,7 @@
         <header class="header"></header>
 
         <section class="main-content">
-            <h1 class="text-center">Chính sách vận chuyển</h1>
+            <h1 class="text-center" style="line-height: 1.4;">Chính sách vận chuyển</h1>
 
             <div class="paragraph">
                 <div style="text-align:center;">
