--- a/index.html
+++ b/index.html
@@ -291,23 +291,28 @@
             <ul class="under-top__hot-list">
               <div class="row">
                 <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__hot-item">
-                    <a href="" class="under-top__hot-item-link">
-                      <div class="under-top__hot-item-img-wrapper">
+                  <li class="under-top__hot-item product-card">
+                    <a
+                      href=""
+                      class="under-top__hot-item-link product-card__link"
+                    >
+                      <div
+                        class="under-top__hot-item-img-wrapper product-card__img-wrapper"
+                      >
                         <img
-                          class="under-top__hot-item-img main-img"
+                          class="under-top__hot-item-img main-img product-card__img product-card__main-img"
                           src="./assets/imgs/home/mock-product.webp"
                           alt="Hot product image"
                         />
 
                         <img
-                          class="under-top__hot-item-img hover-img"
+                          class="under-top__hot-item-img hover-img product-card__img product-card__hover-img"
                           src="./assets/imgs/home/mock-product-2.webp"
                           alt="Hot product image"
                         />
 
                         <button
-                          class="btn btn-primary under-top__hot-item-add-cart-btn"
+                          class="btn btn-primary under-top__hot-item-add-cart-btn product-card__add-cart-btn"
                           data-product-id
                           data-add-to-cart-btn
                         >
@@ -315,139 +320,13 @@
                         </button>
                       </div>
 
-                      <p class="under-top__hot-item-name">
+                      <p class="under-top__hot-item-name product-card__name">
                         Chuột không dây siêu nhẹ Pulsar X2 Wireless X
                         RandomfrankP (Limited Edition)
                       </p>
-                      <p class="under-top__hot-item-price">2.499.000đ</p>
-                    </a>
-                  </li>
-                </div>
-
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__hot-item">
-                    <a href="" class="under-top__hot-item-link">
-                      <div class="under-top__hot-item-img-wrapper">
-                        <img
-                          class="under-top__hot-item-img main-img"
-                          src="./assets/imgs/home/mock-product.webp"
-                          alt="Hot product image"
-                        />
-
-                        <img
-                          class="under-top__hot-item-img hover-img"
-                          src="./assets/imgs/home/mock-product-2.webp"
-                          alt="Hot product image"
-                        />
-
-                        <button
-                          class="btn btn-primary under-top__hot-item-add-cart-btn"
-                        >
-                          + Thêm
-                        </button>
-                      </div>
-
-                      <p class="under-top__hot-item-name">
-                        Chuột không dây siêu nhẹ Pulsar X2 Wireless X
-                        RandomfrankP (Limited Edition)
+                      <p class="under-top__hot-item-price product-card__price">
+                        2.499.000đ
                       </p>
-                      <p class="under-top__hot-item-price">2.499.000đ</p>
-                    </a>
-                  </li>
-                </div>
-
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__hot-item">
-                    <a href="" class="under-top__hot-item-link">
-                      <div class="under-top__hot-item-img-wrapper">
-                        <img
-                          class="under-top__hot-item-img main-img"
-                          src="./assets/imgs/home/mock-product.webp"
-                          alt="Hot product image"
-                        />
-
-                        <img
-                          class="under-top__hot-item-img hover-img"
-                          src="./assets/imgs/home/mock-product-2.webp"
-                          alt="Hot product image"
-                        />
-
-                        <button
-                          class="btn btn-primary under-top__hot-item-add-cart-btn"
-                        >
-                          + Thêm
-                        </button>
-                      </div>
-
-                      <p class="under-top__hot-item-name">
-                        Chuột không dây siêu nhẹ Pulsar X2 Wireless X
-                        RandomfrankP (Limited Edition)
-                      </p>
-                      <p class="under-top__hot-item-price">2.499.000đ</p>
-                    </a>
-                  </li>
-                </div>
-
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__hot-item">
-                    <a href="" class="under-top__hot-item-link">
-                      <div class="under-top__hot-item-img-wrapper">
-                        <img
-                          class="under-top__hot-item-img main-img"
-                          src="./assets/imgs/home/mock-product.webp"
-                          alt="Hot product image"
-                        />
-
-                        <img
-                          class="under-top__hot-item-img hover-img"
-                          src="./assets/imgs/home/mock-product-2.webp"
-                          alt="Hot product image"
-                        />
-
-                        <button
-                          class="btn btn-primary under-top__hot-item-add-cart-btn"
-                        >
-                          + Thêm
-                        </button>
-                      </div>
-
-                      <p class="under-top__hot-item-name">
-                        Chuột không dây siêu nhẹ Pulsar X2 Wireless X
-                        RandomfrankP (Limited Edition)
-                      </p>
-                      <p class="under-top__hot-item-price">2.499.000đ</p>
-                    </a>
-                  </li>
-                </div>
-
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__hot-item">
-                    <a href="" class="under-top__hot-item-link">
-                      <div class="under-top__hot-item-img-wrapper">
-                        <img
-                          class="under-top__hot-item-img main-img"
-                          src="./assets/imgs/home/mock-product.webp"
-                          alt="Hot product image"
-                        />
-
-                        <img
-                          class="under-top__hot-item-img hover-img"
-                          src="./assets/imgs/home/mock-product-2.webp"
-                          alt="Hot product image"
-                        />
-
-                        <button
-                          class="btn btn-primary under-top__hot-item-add-cart-btn"
-                        >
-                          + Thêm
-                        </button>
-                      </div>
-
-                      <p class="under-top__hot-item-name">
-                        Chuột không dây siêu nhẹ Pulsar X2 Wireless X
-                        RandomfrankP (Limited Edition)
-                      </p>
-                      <p class="under-top__hot-item-price">2.499.000đ</p>
                     </a>
                   </li>
                 </div>
