--- a/pages/custom-input-template.html
+++ b/pages/custom-input-template.html
@@ -3,7 +3,7 @@
     placeholder=" "
     name=""
     type="email"
-    class="footer__input-text custom-input__input-text"
+    class="custom-input__input-text"
   />
-  <span class="footer__input-label custom-input__input-label">Email</span>
+  <span class="custom-input__input-label">Email</span>
 </div>
