fix card in trending prod 2 home page

--- a/collections.html
+++ b/collections.html
@@ -42,7 +42,10 @@
     <link rel="stylesheet" href="./assets/css/commons/footer.css" />
 
     <!-- CSS -->
-
+    <link
+      rel="stylesheet"
+      href="./assets/css/collections/section-collection.css"
+    />
   </head>
   <body>
     <div class="app">
@@ -67,8 +70,37 @@
 
       <!-- Header render with JS -->
       <header class="header"></header>
+      <div class="padding-header"></div>
 
-      
+      <!-- Section collection -->
+      <div class="collection">
+        <div class="container-1600">
+          <div class="collection__banner" style="background-image: url('./assets/imgs/collections/banner.webp');">
+
+            <div class="collection_banner-detail-container">
+              <h3 class="collection_banner-detail-title">
+                Bàn phím cơ không dây và có dây
+              </h3>
+              <h4 class="collection_banner-detail-sub-title">
+                Bàn phím cơ thoải mái cho lập trình viên hoặc game thủ giảm mệt
+                mỏi khi sử dụng máy tính lâu dài.
+              </h4>
+              <p class="collection_banner-detail-para">
+                Bàn phím cơ là thiết bị không thể thiếu giúp bạn sử dụng máy
+                tính hàng giờ liền tại văn phòng, tại nhà mà không cảm thấy mệt
+                mỏi. Không chỉ làm việc, bàn phím cơ còn là công cụ giúp bạn tự
+                tin chiến thắng đối thủ với những pha highlight mãn nhãn.
+              </p>
+            </div>
+          </div>
+
+          <div class="collection__main-content">
+            <div class="collection__filter-bar">
+              
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- Footer -->
       <footer class="footer"></footer>
