--- a/index.html
+++ b/index.html
@@ -326,6 +326,8 @@
                       + Thêm
                     </button>
 
+                    <div class="under-top__hot-item-sold-out product-card__sold-out">Hết hàng</div>
+
                     <p class="under-top__hot-item-price product-card__price">
                       2.499.000đ
                     </p>
