--- a/pages/card-template.html
+++ b/pages/card-template.html
@@ -1,15 +1,16 @@
+<!-- product-card--soldout -->
 <div class="product-card">
   <a href="" class="product-card__link">
     <div class="product-card__img-wrapper">
       <img
         class="product-card__img product-card__main-img"
-        src="./assets/imgs/home/mock-product.webp"
+        src="..."
         alt="Hot product image"
       />
 
       <img
         class="product-card__img product-card__hover-img"
-        src="./assets/imgs/home/mock-product-2.webp"
+        src="..."
         alt="Hot product image"
       />
     </div>
@@ -27,6 +28,8 @@
   >
     + Thêm
   </button>
+
+  <div class="product-card__sold-out">Hết hàng</div>
 
   <p class="product-card__price">2.499.000đ</p>
 </div>
