--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
         <header class="header"></header>
 
         <section class="main-content">
-            <h1 class="text-center">Liên hệ</h1>
+            <h1 class="text-center title">Liên hệ</h1>
 
             <div class="paragraph">
                 <img src="./assets/imgs/contact/mouses.jpg" class="image" style="margin-bottom: 30px;">
