filter bar togglers

--- a/collections.html
+++ b/collections.html
@@ -75,8 +75,12 @@
       <!-- Section collection -->
       <div class="collection">
         <div class="container-1600">
-          <div class="collection__banner" style="background-image: url('./assets/imgs/collections/banner.webp');">
-
+          <div
+            class="collection__banner"
+            style="
+              background-image: url('./assets/imgs/collections/banner.webp');
+            "
+          >
             <div class="collection_banner-detail-container">
               <h3 class="collection_banner-detail-title">
                 Bàn phím cơ không dây và có dây
@@ -96,7 +100,152 @@
 
           <div class="collection__main-content">
             <div class="collection__filter-bar">
-              
+              <div class="collection__filter-bar-availability">
+                <span class="collection__filter-bar-availability-text"
+                  >Còn hàng</span
+                >
+
+                <label
+                  class="custom-switch"
+                  for="custom-switch__checkbox-input"
+                >
+                  <input
+                    type="checkbox"
+                    class="custom-switch__checkbox-input"
+                    id="custom-switch__checkbox-input"
+                  />
+                  <span
+                    class="custom-switch__slider custom-switch__slider--round"
+                  ></span>
+                </label>
+              </div>
+
+              <ul class="collection__filter-bar-list">
+                <li class="collection__filter-bar-item">
+                  <label
+                    class="collection__filter-bar-item-label"
+                    for="collection__filter-bar-item-input-brand"
+                  >
+                    Thương hiệu
+                    <input
+                      type="checkbox"
+                      name=""
+                      class="collection__filter-bar-item-input"
+                      id="collection__filter-bar-item-input-brand"
+                      hidden
+                    />
+                    <span class="collection__filter-bar-item-label-icon">
+                      <i class="bi bi-chevron-up"></i>
+                    </span>
+                  </label>
+
+                  <ul class="collection__brand-list">
+                    <li class="collection__brand-item">
+                      <label
+                        class="collection__brand-item-label"
+                        for="filco-toggler-input"
+                      >
+                        <input
+                          type="checkbox"
+                          id="filco-toggler-input"
+                          data-brand-name="filco"
+                          hidden
+                        />
+                        Filco (<span>5</span>)
+                      </label>
+                    </li>
+
+                    <li class="collection__brand-item">
+                      <label
+                        class="collection__brand-item-label"
+                        for="keychron-toggler-input"
+                      >
+                        <input
+                          type="checkbox"
+                          id="keychron-toggler-input"
+                          data-brand-name="keychron"
+                          hidden
+                        />
+                        Keychron (<span>6</span>)
+                      </label>
+                    </li>
+                  </ul>
+                </li>
+
+                <li class="collection__filter-bar-item">
+                  <label
+                    class="collection__filter-bar-item-label"
+                    for="collection__filter-bar-item-input-type"
+                  >
+                    Loại sản phẩm
+                    <input
+                      type="checkbox"
+                      name=""
+                      class="collection__filter-bar-item-input"
+                      id="collection__filter-bar-item-input-type"
+                      hidden
+                    />
+                    <span class="collection__filter-bar-item-label-icon">
+                      <i class="bi bi-chevron-up"></i>
+                    </span>
+                  </label>
+
+                  <ul class="collection__type-list">
+                    <li class="collection__type-item">
+                      <label
+                        class="collection__type-item-label"
+                        for="keyboard-toggler-input"
+                      >
+                        <input
+                          type="checkbox"
+                          id="keyboard-toggler-input"
+                          data-type-name="keyboard"
+                          hidden
+                        />
+                        Bàn phím cơ (<span>54</span>)
+                      </label>
+                    </li>
+
+                    <li class="collection__type-item">
+                      <label
+                        class="collection__type-item-label"
+                        for="mouse-toggler-input"
+                      >
+                        <input
+                          type="checkbox"
+                          id="mouse-toggler-input"
+                          data-type-name="mouse"
+                          hidden
+                        />
+                        Chuột (<span>24</span>)
+                      </label>
+                    </li>
+                  </ul>
+                </li>
+
+                <li class="collection__filter-bar-item">
+                  <label
+                    class="collection__filter-bar-item-label"
+                    for="collection__filter-bar-item-input-price"
+                  >
+                    Giá
+                    <input
+                      type="checkbox"
+                      name=""
+                      class="collection__filter-bar-item-input"
+                      id="collection__filter-bar-item-input-price"
+                      hidden
+                    />
+                    <span class="collection__filter-bar-item-label-icon">
+                      <i class="bi bi-chevron-up"></i>
+                    </span>
+                  </label>
+                </li>
+              </ul>
+
+              <select name="" id="">
+                <option value="">123456</option>
+              </select>
             </div>
           </div>
         </div>
@@ -111,10 +260,12 @@
       import { renderFooter } from './assets/js/commons/footer.js';
 
       const header = document.querySelector('header.header');
-      renderHeader(header, true);
+      renderHeader(header, false);
 
       const footer = document.querySelector('footer.footer');
       renderFooter(footer);
     </script>
+
+    <script src="./assets/js/collections/section-collection.js"></script>
   </body>
 </html>
