--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
             <div class="row">
               <div class="col l-2-4 m-4 c-6">
                 <li class="under-top__category-item">
-                  <a href="" class="under-top__category-item-link">
+                  <a
+                    href="./collections.html?collectionId=1"
+                    class="under-top__category-item-link"
+                  >
                     <img
                       class="under-top__category-item-img"
                       src="./assets/imgs/home/under-top-category-1.webp"
@@ -326,7 +329,11 @@
                       + Thêm
                     </button>
 
-                    <div class="under-top__hot-item-sold-out product-card__sold-out">Hết hàng</div>
+                    <div
+                      class="under-top__hot-item-sold-out product-card__sold-out"
+                    >
+                      Hết hàng
+                    </div>
 
                     <p class="under-top__hot-item-price product-card__price">
                       2.499.000đ
