product detail page

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__hot-item product-card">
                     <a
-                      href=""
+                      href="./product-detail.html?productId=1"
                       class="under-top__hot-item-link product-card__link"
                     >
                       <div
